# oc-projet_12

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: .flaskenv  config.py  db.txt  epicevent.sql  mock.py
api/app/: __init__.py  models.py
api/app/auth/: auth.py  routes.py
api/app/core/: routes.py
api/migrations/versions/: 15f7f4aabda4_add_token_and_token_expiration_to_user_.py  55a4ee7b52be_makes_event_notes_optional_and_add_.py  965ea1333069_makes_support_contact_id_optional_for_.py  9ef5cf038585_.py
api/tests/functional/: test_auth_routes.py  test_client_routes.py  test_contract_routes.py  test_core_routes.py  test_event_routes.py  test_user_routes.py
api/tests/unit/: test_models.py
cli/: helpers.py  main.py  rbac.py  test_cmds.py  version.py
cli/controllers/clients/: __init__.py
cli/controllers/contracts/: __init__.py
cli/controllers/events/: __init__.py
cli/controllers/users/: __init__.py
cli/views/: clients.py  contracts.py  events.py  shared.py  users.py
