[project]
name = "p12-epic-events"
version = "0.1.0"
description = "A CLI CRM with a Flask api backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-httpauth>=4.8.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pymysql>=1.1.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sentry-sdk[flask]>=2.22.0",
    "sqlalchemy>=2.0.37",
    "typer>=0.15.1",
]
